fix(style): no padding between menu buttons on mobile
Also fix the computation of the number of slots available

--- a/src/components/Menu/ActionEntry.scss
+++ b/src/components/Menu/ActionEntry.scss
@@ -45,6 +45,12 @@
 		margin-right: 2px;
 	}
 
+	@media only screen and (max-width: 767px) {
+		.button-vue {
+			margin-right: 0;
+		}
+	}
+
 	.action-item__menutoggle.action-item__menutoggle--with-icon-slot {
 		opacity: 1;
 	}
